Created util package for vector2d, assert and BGImageLoadTask. Added aliens and rotation towards player. Upgraded IDE and tools

--- a/app/src/main/todo.txt
+++ b/app/src/main/todo.txt
@@ -1,7 +1,8 @@
 -fix pause button
--add aliens
+-add alien shooting and sounds
 -add powerups (time slow, half size)
 -add sounds for powerups
+-different explosion sounds for dieing vs killing aliens
 
 ROCKS
 -add sounds to rocks
