-initial work on alien projectiles -before switching positions from int to float

--- a/app/src/main/todo.txt
+++ b/app/src/main/todo.txt
@@ -3,6 +3,8 @@
 -add powerups (time slow, half size)
 -add sounds for powerups
 -different explosion sounds for dieing vs killing aliens
+-move assets to subfolders
+-smooth backgrounds
 
 ROCKS
 -add sounds to rocks
