improved scoring tweaked object spawn rate added alien projectile collisions

--- a/app/src/main/todo.txt
+++ b/app/src/main/todo.txt
@@ -6,8 +6,7 @@
 -smooth backgrounds
 
 ALIEN SHOOTING
--add sounds
--check for hitting the player (and player powerups)
+-add different sounds
 
 ROCKS
 -add sounds to rocks
